--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "start": "node ./src/index.js"
   },
-  "author": "",
+  "author": "liang3472",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/liang3472/input-data-mintbot-wl.git"
+  },
   "license": "ISC",
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.1",
